chore: refatora os eventos